@@ -1,5 +1,9 @@
 import requests
 from typing import Protocol, Iterator
+from meteo_jobs.logger import get_logger
+
+
+logger = get_logger(__name__)
 
 class ExtractAPI(Protocol):
 
@@ -11,6 +15,7 @@ class ExtractAPI(Protocol):
         """
             fetch data using api_url
         """
+        logger.info(f"Requests GET: api url : {self.api_url}, options: {options}")
         response = requests.get(self.api_url, stream=is_stream)
         response.raise_for_status()
         return response
